# haskell-erlang-bridge

./: .gitignore  Makefile  README.md  cabal.config  example.hs  haskell-erlang-bridge.cabal
Erlang/: Interface.chs
src/: Common.hs  Epmd.hs  Handshake.hs
src/Erlang/: Distribution.hs
src/Erlang/Distribution/: EPMD.hs  Internal.hs  Node.hs  Term.hs
src/Network/TCP/: Receive.hs
test/: test.hs
test/Erlang/Distribution/: Instances.hs
