name:                haskell-erlang-bridge
version:             0.1.0.0
synopsis:            Haskell-Erlang bridge
-- description:         
homepage:            https://github.com/mitchellwrosen/haskell-erlang-bridge
license:             LGPL-3
license-file:        LICENSE
author:              Mitchell Rosen
maintainer:          mitchellwrosen@gmail.com
-- copyright:           
category:            Distribution
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Handshake, Common, Epmd
  -- other-modules:       
  other-extensions:    DeriveDataTypeable, GeneralizedNewtypeDeriving, LambdaCase, OverloadedStrings, ScopedTypeVariables
  build-depends:       base >=4.7 && <4.8,
                       attoparsec,
                       bytestring,
                       cereal,
                       cryptohash,
                       network-simple,
                       random,
                       transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
