name:                haskell-erlang-bridge
version:             0.1.0.0
synopsis:            Haskell-Erlang bridge
-- description:         
homepage:            https://github.com/mitchellwrosen/haskell-erlang-bridge
license:             LGPL-3
license-file:        LICENSE
author:              Mitchell Rosen
maintainer:          mitchellwrosen@gmail.com
-- copyright:           
category:            Distribution
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Erlang.Distribution
                       Erlang.Distribution.Internal
                     , Term
  default-extensions:   DeriveDataTypeable
                      , DeriveGeneric
                      , GeneralizedNewtypeDeriving
                      , LambdaCase
                      , OverloadedStrings
                      , ScopedTypeVariables

  build-depends:       base >=4.7 && <5
                     , attoparsec
                     , bytestring
                     , cereal
                     , containers
                     , cryptohash
                     , network-simple
                     , QuickCheck
                     , quickcheck-instances
                     , random
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:       -Wall

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  default-extensions: ScopedTypeVariables
  build-depends:       base >=4.7 && <5
                     , cereal
                     , haskell-erlang-bridge
                     , tasty
                     , tasty-quickcheck
